--- a/crates/egui-winit/Cargo.toml
+++ b/crates/egui-winit/Cargo.toml
@@ -75,6 +75,10 @@ document-features = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 webbrowser = { version = "1.0.0", optional = true }
 
+# hack for raw keyboard input
+parking_lot = { workspace = true }
+lazy_static = "1.5.0"
+
 [target.'cfg(any(target_os="linux", target_os="dragonfly", target_os="freebsd", target_os="netbsd", target_os="openbsd"))'.dependencies]
 smithay-clipboard = { version = "0.7.2", optional = true }
 
